Page Blog ready
News page started. Responsive improvements. Images effect hover. Improvements in semantic and bug fixes.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="about/about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
             <a href="products/products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
             <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
-            <a href="#fakelink" title="Notícias">Notícias<span class="icon-10"></span></a>
+            <a href="news/blog.html" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="#fakelink" title="Contato">Contato<span class="icon-10"></span></a>
           </nav>
           <form action="get" class="main-search" role="search">
@@ -213,7 +213,7 @@
               <div class="col-xs-12 col-sm-6 col-md-3">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Transparência e confiabilidade">
+                    <a href="news/news.html" class="hover-wrap" title="Transparência e confiabilidade">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico icon-8"></span>
                     </a>
@@ -227,7 +227,7 @@
               <div class="col-xs-12 col-sm-6 col-md-3">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Hospital Pérola Byington">
+                    <a href="news/news.html" class="hover-wrap" title="Hospital Pérola Byington">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico icon-8"></span>
                     </a>
@@ -241,7 +241,7 @@
               <div class="col-xs-12 col-sm-6 col-md-3">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Tratamento de cobaias de plástico">
+                    <a href="news/news.html" class="hover-wrap" title="Tratamento de cobaias de plástico">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico icon-8"></span>
                     </a>
@@ -255,7 +255,7 @@
               <div class="col-xs-12 col-sm-6 col-md-3">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Condicionamento de atendimento">
+                    <a href="news/news.html" class="hover-wrap" title="Condicionamento de atendimento">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico icon-8"></span>
                     </a>
@@ -273,7 +273,7 @@
               <div class="col-xs-12 col-sm-6 col-md-3">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Tratamento de cobaias de plástico">
+                    <a href="news/news.html" class="hover-wrap" title="Tratamento de cobaias de plástico">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico icon-8"></span>
                     </a>
@@ -287,7 +287,7 @@
               <div class="col-xs-12 col-sm-6 col-md-3">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Tratamento de cobaias de plástico">
+                    <a href="news/news.html" class="hover-wrap" title="Tratamento de cobaias de plástico">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico icon-8"></span>
                     </a>
@@ -301,7 +301,7 @@
               <div class="col-xs-12 col-sm-6 col-md-3">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Tratamento de cobaias de plástico">
+                    <a href="news/news.html" class="hover-wrap" title="Tratamento de cobaias de plástico">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico icon-8"></span>
                     </a>
@@ -315,7 +315,7 @@
               <div class="col-xs-12 col-sm-6 col-md-3">
                 <article class="border-content">
                   <div class="item-thumbs">
-                    <a href="#fakelink" class="hover-wrap" title="Tratamento de cobaias de plástico">
+                    <a href="news/news.html" class="hover-wrap" title="Tratamento de cobaias de plástico">
                     <span class="overlay-img"></span>
                     <span class="overlay-img-ico icon-8"></span>
                     </a>
@@ -500,21 +500,21 @@
             </div>
             <div class="col-sm-5 mb-0">
               <div class="box-footer">
-		            <h3 class="heading-1">Nosso catálogo</h3>
-		            <div class="item-thumbs">
-		              <a href="#fakelink" class="hover-wrap" title="Caltálogo">
-		              <span class="overlay-img"></span>
-		              <span class="overlay-img-ico icon-4"></span>
-		              </a>
-		              <img src="images/catalogo.jpg" class="img-responsive" alt="Catálogo"/>
-		            </div>
-		          </div>
+                <h3 class="heading-1">Nosso catálogo</h3>
+                <div class="item-thumbs">
+                  <a href="#fakelink" class="hover-wrap" title="Caltálogo">
+                  <span class="overlay-img"></span>
+                  <span class="overlay-img-ico icon-4"></span>
+                  </a>
+                  <img src="images/catalogo.jpg" class="img-responsive" alt="Catálogo"/>
+                </div>
+              </div>
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
                   <a href="products/products.html"><span class="icon-10"></span>Produtos</a>
                   <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
-                  <a href="#fakelink"><span class="icon-10"></span>Notícias</a>
+                  <a href="news/blog.html"><span class="icon-10"></span>Notícias</a>
                   <a href="#fakelink"><span class="icon-10"></span>Contato</a>
                 </nav>
               </div>
