--- a/products/product.html
+++ b/products/product.html
@@ -29,7 +29,7 @@
             <a href="../about/about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
             <a href="../products/products.html" class="current" title="Produtos">Produtos<span class="icon-10"></span></a>
             <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
-            <a href="#fakelink" title="Notícias">Notícias<span class="icon-10"></span></a>
+            <a href="../news/blog.html" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="#fakelink" title="Contato">Contato<span class="icon-10"></span></a>
           </nav>
           <form action="get" class="main-search" role="search">
@@ -44,7 +44,7 @@
             <a href="#fakelink" class="ico-google btn"></a>
           </div>
         </section>
-        <div class="col-xs-12 col-sm-12 col-md-9 mb-0">
+        <div class="col-xs-12 col-sm-12 col-md-9 mb-0 hidden-xs hidden-sm">
           <div class="main-slider-container">
             <div class="alfa-slider">
               <ul class="slides">
@@ -126,55 +126,55 @@
       </div>
     </header>
     <main class="container" role="main">
-    	<h1 class="title-front mb-3">Nutren® Active Chocolate</h1>
+      <h1 class="title-front mb-3">Nutren® Active Chocolate</h1>
       <section class="row">
-        <figure class="col-xs-12 col-sm-5 col-md-6 col-sm-push-7 col-md-push-6">
+        <figure class="fig-hover col-xs-12 col-sm-5 col-md-6 col-sm-push-7 col-md-push-6">
           <img src="../images/prod-5.jpg" class="img-responsive" alt="Nestlé Health Science">
         </figure>
-        <div class="col-xs-12 col-sm-7 col-md-6 col-sm-pull-5 col-md-pull-6">
+        <aside class="col-xs-12 col-sm-7 col-md-6 col-sm-pull-5 col-md-pull-6">
           <div class="content-box">
-	          <div class="content-inner">
-	          	<h3 class="heading-3">Descrição</h3>
-	          	<p>Complemento alimentar em pó com 25 vitaminas e minerais. </p>
-		          <p><b>Apresentação:</b> Lata de 400g</p>
-		          <p><b>Sabor:</b> Chocolate</p>
-		          <p><b>Contém Glúten</b></p>
-	          </div>
-	          <div class="content-inner">
-	          	<h3 class="heading-3">Distribuição energética</h3>
-	            <p>Para o sabor Chocolate</p>
-	          	<ul class="list-b">
-	              <li><span class="icon-6"></span>Proteínas: 30%</li>
-	              <li><span class="icon-6"></span>Carboidratos: 60%</li>
-	              <li><span class="icon-6"></span>Gorduras: 10%</li>
-	            </ul>
-	          </div>
-	          <div class="content-inner">
-	          	<h3 class="heading-3">Indicação</h3>
-	          	<ul class="list-b">
-	              <li><span class="icon-6"></span>Baixo peso</li>
-	              <li><span class="icon-6"></span>Desnutridos</li>
-	              <li><span class="icon-6"></span>Inapetentes</li>
-	            </ul>
-	          </div>
-	          <div class="content-inner">
-	          	<h3 class="heading-3">Conservação</h3>
-	          	<ul class="list-b">
-	              <li><span class="icon-6"></span>Conservar a lata sempre bem fechada, em lugar fresco e seco.</li>
-	              <li><span class="icon-6"></span>Melhor consumir dentro de 30 dias após a abertura da lata.</li>
-	            </ul>
-	            <p>Durante o transporte o produto pode se compactar, contudo, seu volume corresponde ao peso líquido indicado.</p>
-	          </div>
-	          <div class="content-inner">
-	          	<h3 class="heading-3">Modo de uso</h3>
-	          	<p>Adicione 2 colheres de sopa cheias (31,5g) em 180ml de leite frio ou quente e misture bem.</p>
-	          </div>
-	          <div class="content-inner">
-	          	<h3 class="heading-3">Igredientes</h3>
-	          	<p>leite em pó desnatado, maltodextrina, frutooligossacarídeos, gordura láctea, inulina, minerais (carbonato de magnésio, carbonato de cálcio, pirofosfato férrico, sulfato de zinco, sulfato de manganês e sulfato de cobre), vitaminas (vitamina C, inositol, niacina, ácido pantotênico, vitamina B6, vitamina B1, vitamina A, vitamina B2, ácido fólico, vitamina K, biotina, vitamina E, vitamina D e vitamina B12) emulsificante lecitina de soja e aromatizante. CONTÉM GLÚTEN.</p>
-	          </div>
+            <div class="content-inner">
+              <h3 class="heading-3">Descrição</h3>
+              <p>Complemento alimentar em pó com 25 vitaminas e minerais. </p>
+              <p><b>Apresentação:</b> Lata de 400g</p>
+              <p><b>Sabor:</b> Chocolate</p>
+              <p><b>Contém Glúten</b></p>
+            </div>
+            <div class="content-inner">
+              <h3 class="heading-3">Distribuição energética</h3>
+              <p>Para o sabor Chocolate</p>
+              <ul class="list-b">
+                <li><span class="icon-6"></span>Proteínas: 30%</li>
+                <li><span class="icon-6"></span>Carboidratos: 60%</li>
+                <li><span class="icon-6"></span>Gorduras: 10%</li>
+              </ul>
+            </div>
+            <div class="content-inner">
+              <h3 class="heading-3">Indicação</h3>
+              <ul class="list-b">
+                <li><span class="icon-6"></span>Baixo peso</li>
+                <li><span class="icon-6"></span>Desnutridos</li>
+                <li><span class="icon-6"></span>Inapetentes</li>
+              </ul>
+            </div>
+            <div class="content-inner">
+              <h3 class="heading-3">Conservação</h3>
+              <ul class="list-b">
+                <li><span class="icon-6"></span>Conservar a lata sempre bem fechada, em lugar fresco e seco.</li>
+                <li><span class="icon-6"></span>Melhor consumir dentro de 30 dias após a abertura da lata.</li>
+              </ul>
+              <p>Durante o transporte o produto pode se compactar, contudo, seu volume corresponde ao peso líquido indicado.</p>
+            </div>
+            <div class="content-inner">
+              <h3 class="heading-3">Modo de uso</h3>
+              <p>Adicione 2 colheres de sopa cheias (31,5g) em 180ml de leite frio ou quente e misture bem.</p>
+            </div>
+            <div class="content-inner">
+              <h3 class="heading-3">Igredientes</h3>
+              <p>leite em pó desnatado, maltodextrina, frutooligossacarídeos, gordura láctea, inulina, minerais (carbonato de magnésio, carbonato de cálcio, pirofosfato férrico, sulfato de zinco, sulfato de manganês e sulfato de cobre), vitaminas (vitamina C, inositol, niacina, ácido pantotênico, vitamina B6, vitamina B1, vitamina A, vitamina B2, ácido fólico, vitamina K, biotina, vitamina E, vitamina D e vitamina B12) emulsificante lecitina de soja e aromatizante. CONTÉM GLÚTEN.</p>
+            </div>
           </div>
-        </div>
+        </aside>
       </section>
       <section class="slider2">
         <h3 class="heading-1">Produtos similares</h3>
@@ -346,21 +346,21 @@
             </div>
             <div class="col-sm-5 mb-0">
               <div class="box-footer">
-		            <h3 class="heading-1">Nosso catálogo</h3>
-		            <div class="item-thumbs">
-		              <a href="#fakelink" class="hover-wrap" title="Caltálogo">
-		              <span class="overlay-img"></span>
-		              <span class="overlay-img-ico icon-4"></span>
-		              </a>
-		              <img src="../images/catalogo.jpg" class="img-responsive" alt="Catálogo"/>
-		            </div>
-		          </div>
+                <h3 class="heading-1">Nosso catálogo</h3>
+                <div class="item-thumbs">
+                  <a href="#fakelink" class="hover-wrap" title="Caltálogo">
+                  <span class="overlay-img"></span>
+                  <span class="overlay-img-ico icon-4"></span>
+                  </a>
+                  <img src="../images/catalogo.jpg" class="img-responsive" alt="Catálogo"/>
+                </div>
+              </div>
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
                   <a href="../products/products.html"><span class="icon-10"></span>Produtos</a>
                   <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
-                  <a href="#fakelink"><span class="icon-10"></span>Notícias</a>
+                  <a href="../news/blog.html"><span class="icon-10"></span>Notícias</a>
                   <a href="#fakelink"><span class="icon-10"></span>Contato</a>
                 </nav>
               </div>
