--- a/products/products.html
+++ b/products/products.html
@@ -29,7 +29,7 @@
             <a href="../about/about.html" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
             <a class="current" title="Produtos">Produtos<span class="icon-10"></span></a>
             <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
-            <a href="#fakelink" title="Notícias">Notícias<span class="icon-10"></span></a>
+            <a href="../news/blog.html" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="#fakelink" title="Contato">Contato<span class="icon-10"></span></a>
           </nav>
           <form action="get" class="main-search" role="search">
@@ -45,7 +45,7 @@
           </div>
         </section>
         <div class="col-xs-12 col-sm-12 col-md-9 mb-0">
-          <div class="main-slider-container">
+          <div class="main-slider-container hidden-xs hidden-sm">
             <div class="alfa-slider">
               <ul class="slides">
                 <li>
@@ -97,9 +97,10 @@
             <section class="col-xs-12">
               <div class="border-content">
                 <div class="clearfix">
-                <h1 class="title-front mb-3">Conheça a nossa linha de produtos</h1>
+                  <h1 class="title-front mb-3">Conheça a nossa linha de produtos</h1>
                 </div>
-                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lâmpadas para microscópios, laringoscópios, laparoscopia e equipamentos científicos de uso medicinal, laboratorial, cirúrgico. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
             </section>
           </div>
@@ -277,21 +278,21 @@
             </div>
             <div class="col-sm-5 mb-0">
               <div class="box-footer">
-		            <h3 class="heading-1">Nosso catálogo</h3>
-		            <div class="item-thumbs">
-		              <a href="#fakelink" class="hover-wrap" title="Caltálogo">
-		              <span class="overlay-img"></span>
-		              <span class="overlay-img-ico icon-4"></span>
-		              </a>
-		              <img src="../images/catalogo.jpg" class="img-responsive" alt="Catálogo"/>
-		            </div>
-		          </div>
+                <h3 class="heading-1">Nosso catálogo</h3>
+                <div class="item-thumbs">
+                  <a href="#fakelink" class="hover-wrap" title="Caltálogo">
+                  <span class="overlay-img"></span>
+                  <span class="overlay-img-ico icon-4"></span>
+                  </a>
+                  <img src="../images/catalogo.jpg" class="img-responsive" alt="Catálogo"/>
+                </div>
+              </div>
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
                   <a href="products.html"><span class="icon-10"></span>Produtos</a>
                   <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
-                  <a href="#fakelink"><span class="icon-10"></span>Notícias</a>
+                  <a href="../news/blog.html"><span class="icon-10"></span>Notícias</a>
                   <a href="#fakelink"><span class="icon-10"></span>Contato</a>
                 </nav>
               </div>
