--- a/about/about.html
+++ b/about/about.html
@@ -29,7 +29,7 @@
             <a class="current" title="Sobre Nós">Sobre Nós<span class="icon-10"></span></a>
             <a href="../products/products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
             <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
-            <a href="#fakelink" title="Notícias">Notícias<span class="icon-10"></span></a>
+            <a href="../news/blog.html" title="Notícias">Notícias<span class="icon-10"></span></a>
             <a href="#fakelink" title="Contato">Contato<span class="icon-10"></span></a>
           </nav>
           <form action="get" class="main-search" role="search">
@@ -45,7 +45,7 @@
           </div>
         </section>
         <div class="col-xs-12 col-sm-12 col-md-9 mb-0">
-          <div class="main-slider-container">
+          <div class="main-slider-container hidden-xs hidden-sm">
             <div class="alfa-slider">
               <ul class="slides">
                 <li>
@@ -112,7 +112,7 @@
       <section class="row">
         <div class="col-xs-12 col-sm-12 col-md-4">
           <div class="content-box border-content">
-            <figure class="figure-box">
+            <figure class="figure-box fig-hover">
               <img src="../images/about-1.jpg" class="img-responsive" alt="Raphaela Aguiar - Presidente"/>
             </figure>
             <h3 class="heading-2 mb-0">Raphaela Aguiar</h3>
@@ -122,7 +122,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="content-box border-content">
-            <figure class="figure-box">
+            <figure class="figure-box fig-hover">
               <img src="../images/about-2.jpg" class="img-responsive" alt="Bruno Fernandes - Gerente Administrativo"/>
             </figure>
             <h3 class="heading-2 mb-0">Bruno Fernandes</h3>
@@ -132,7 +132,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="content-box border-content">
-            <figure class="figure-box">
+            <figure class="figure-box fig-hover">
               <img src="../images/about-3.jpg" class="img-responsive" alt="Carlos Zéfiro - Gerente de vendas"/>
             </figure>
             <h3 class="heading-2 mb-0">Carlos Zéfiro</h3>
@@ -167,7 +167,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+        <div class="col-xs-12 col-md-4 col-lg-4">
           <div class="content-box">
             <h3 class="heading-1">Linhas de atuação</h3>
             <ul class="list-a">
@@ -227,21 +227,21 @@
             </div>
             <div class="col-sm-5 mb-0">
               <div class="box-footer">
-		            <h3 class="heading-1">Nosso catálogo</h3>
-		            <div class="item-thumbs">
-		              <a href="#fakelink" class="hover-wrap" title="Caltálogo">
-		              <span class="overlay-img"></span>
-		              <span class="overlay-img-ico icon-4"></span>
-		              </a>
-		              <img src="../images/catalogo.jpg" class="img-responsive" alt="Catálogo"/>
-		            </div>
-		          </div>
+                <h3 class="heading-1">Nosso catálogo</h3>
+                <div class="item-thumbs">
+                  <a href="#fakelink" class="hover-wrap" title="Caltálogo">
+                  <span class="overlay-img"></span>
+                  <span class="overlay-img-ico icon-4"></span>
+                  </a>
+                  <img src="../images/catalogo.jpg" class="img-responsive" alt="Catálogo"/>
+                </div>
+              </div>
               <div class="box-footer">
                 <h3 class="heading-1">Acesso rápido</h3>
                 <nav class="vert-nav">
                   <a href="../products/products.html"><span class="icon-10"></span>Produtos</a>
                   <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
-                  <a href="#fakelink"><span class="icon-10"></span>Notícias</a>
+                  <a href="../news/blog.html"><span class="icon-10"></span>Notícias</a>
                   <a href="#fakelink"><span class="icon-10"></span>Contato</a>
                 </nav>
               </div>
