Contact Page was added
Improviments

--- a/about/about.html
+++ b/about/about.html
@@ -30,7 +30,7 @@
             <a href="../products/products.html" title="Produtos">Produtos<span class="icon-10"></span></a>
             <a href="#fakelink" title="Serviços">Serviços<span class="icon-10"></span></a>
             <a href="../news/blog.html" title="Notícias">Notícias<span class="icon-10"></span></a>
-            <a href="#fakelink" title="Contato">Contato<span class="icon-10"></span></a>
+            <a href="../contact.html" title="Contato">Contato<span class="icon-10"></span></a>
           </nav>
           <form action="get" class="main-search" role="search">
             <div class="main-search-ct">
@@ -242,7 +242,7 @@
                   <a href="../products/products.html"><span class="icon-10"></span>Produtos</a>
                   <a href="#fakelink"><span class="icon-10"></span>Serviços</a>
                   <a href="../news/blog.html"><span class="icon-10"></span>Notícias</a>
-                  <a href="#fakelink"><span class="icon-10"></span>Contato</a>
+                  <a href="../contact.html"><span class="icon-10"></span>Contato</a>
                 </nav>
               </div>
             </div>
