Change page About Us

--- a/about/about.html
+++ b/about/about.html
@@ -108,35 +108,31 @@
     </header>
     <main class="container" role="main">
       <h1 class="title-front mb-3">Conheça a Alfa Médico Hospitalar</h1>
-      <h3 class="heading-1">Nossa equipe</h3>
       <section class="row">
         <div class="col-xs-12 col-sm-12 col-md-4">
           <div class="content-box border-content">
+          	<h3 class="heading-2">AGILIDADE</h3>
             <figure class="figure-box fig-hover">
-              <img src="../images/about-1.jpg" class="img-responsive" alt="Raphaela Aguiar - Presidente"/>
+              <img src="../images/about-3.jpg" class="img-responsive" alt="Raphaela Aguiar - Presidente"/>
             </figure>
-            <h3 class="heading-2 mb-0">Raphaela Aguiar</h3>
-            <h5 class="sub-heading">Presidente</h5>
             <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="content-box border-content">
+          	<h3 class="heading-2">COMPROMISSO</h3>
             <figure class="figure-box fig-hover">
               <img src="../images/about-2.jpg" class="img-responsive" alt="Bruno Fernandes - Gerente Administrativo"/>
             </figure>
-            <h3 class="heading-2 mb-0">Bruno Fernandes</h3>
-            <h5 class="sub-heading">Gerente Administrativo</h5>
             <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="content-box border-content">
+          	<h3 class="heading-2">ASSISTÊNCIA CONTÍNUA</h3>
             <figure class="figure-box fig-hover">
-              <img src="../images/about-3.jpg" class="img-responsive" alt="Carlos Zéfiro - Gerente de vendas"/>
+              <img src="../images/about-1.jpg" class="img-responsive" alt="Carlos Zéfiro - Gerente de vendas"/>
             </figure>
-            <h3 class="heading-2 mb-0">Carlos Zéfiro</h3>
-            <h5 class="sub-heading">Gerente de Vendas</h5>
             <p class="mb-1">Porta um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível.</p>
           </div>
         </div>
